--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "animate.css": "^4.1.1",
     "firebase": "^9.21.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
+    "react-carousel": "^4.3.0",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^9.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
