--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.5.0",
     "animate.css": "^4.1.1",
     "firebase": "^9.21.0",
+    "framer-motion": "^10.12.12",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-carousel": "^4.3.0",
