--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
+    "sass": "^1.63.3",
     "swiper": "^9.3.2",
     "web-vitals": "^0.2.4"
   },
@@ -46,13 +47,16 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.2.11",
+    "@types/react-dom": "^18.2.4",
     "eslint": "^8.39.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.32.2",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "typescript": "^4.9.5"
   },
   "husky": {
     "hooks": {
