--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@reduxjs/toolkit": "^1.9.5",
     "animate.css": "^4.1.1",
     "firebase": "^9.21.0",
@@ -11,6 +12,7 @@
     "react": "^18.0.0",
     "react-carousel": "^4.3.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
@@ -25,8 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint ."
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -52,9 +53,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
-    "eslint": "^8.39.0",
-    "eslint-plugin-node": "^11.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "typescript": "^4.9.5"
   },
